--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/firestore": "^20.4.0",
+    "@react-native-firebase/storage": "^20.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -17,9 +21,13 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-gifted-chat": "^2.6.2",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
