--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,6 +115,8 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation project(':react-native-vector-icons')
+    implementation platform('com.google.firebase:firebase-bom:33.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
