before solving error

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,7 +9,8 @@ apply plugin: 'com.google.gms.google-services'
  */
  apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 project.ext.react = [
-    enableHermes: true,  // Make sure Hermes is enabled
+    entryFile: "index.js",
+    enableHermes: true,  
 ]
 
  
