--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/slider": "^4.5.3",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/database": "^20.4.0",
@@ -22,6 +23,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-audio-recorder-player": "^3.6.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.2",
@@ -30,6 +32,7 @@
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-slider": "^0.11.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
