--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-audio-recorder-player": "^3.6.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.6.2",
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-slider": "^0.11.0",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
