--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.75.2",
     "react-native-audio-recorder-player": "^3.6.11",
     "react-native-document-picker": "^9.3.1",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-get-random-values": "^1.11.0",
