--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-slider": "^0.11.0",
     "react-native-sound": "^0.11.2",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
