--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-gifted-chat": "^2.6.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
+    "react-native-pdf": "^6.7.5",
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
